--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
 <!DOCTYPE html>
+<html>
+	<head>
+		<link href='http://fonts.googleapis.com/css?family=Quando' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+		<link rel="shortcut icon" href="http://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Red_dot.svg/512px-Red_dot.svg.png" />
+		<title>Wesley Moss - Lindon, UT | About Me</title>
+	</head>
+	<body>
+		<div class="aboutme">
+			<h1 id="name">WESLEY MOSS</h1>
+			<h3 id="job">Warehouse Manager</h3>
+			<p id="describeme">Born in Provo, UT and raised in Lindon, UT. Currently working fulltime for <a href="missionbelt.com">Mission Belt Co</a>.</p>
+			<p>Filler text</p>
+			<p>Filler text</p>
+			<p>Filler text</p>
+			<p>Filler text</p>
+			<p>Filler text</p>
+			<p>Filler text</p>
+			<p>Filler text</p>
+			<p>Filler text</p>
+			<p>Filler text</p>
+		</div>
+		
+	</body>
+	<footer>EST. 1989</footer>
+</html>
