added about me info

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="initial-scale=1">
 		<link href='http://fonts.googleapis.com/css?family=Quando' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<link rel="shortcut icon" href="http://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Red_dot.svg/512px-Red_dot.svg.png" />
@@ -10,16 +11,11 @@
 		<div class="aboutme">
 			<h1 id="name">WESLEY MOSS</h1>
 			<h3 id="job">Warehouse Manager</h3>
-			<p id="describeme">Born in Provo, UT and raised in Lindon, UT. Currently working fulltime for <a href="missionbelt.com">Mission Belt Co</a>.</p>
-			<p>Filler text</p>
-			<p>Filler text</p>
-			<p>Filler text</p>
-			<p>Filler text</p>
-			<p>Filler text</p>
-			<p>Filler text</p>
-			<p>Filler text</p>
-			<p>Filler text</p>
-			<p>Filler text</p>
+			<p id="describeme">Born in Provo, UT and raised in Lindon, UT. Working full-time for <a href="missionbelt.com">Mission Belt Co</a>.</p>
+			<button type="button">E-Mail</button>
+			<p>Currently attending DevMountain, a 12 week program for web development, with hopes to move up the ladder at his current job.</p>
+			<p>When I'm not working or studying, I spend my free time going to the gym, playing soccer, and spending time with friends.</p>
+			<p>If you'd like to know more about me, visit my social media profiles below!</p>
 		</div>
 		
 	</body>
