--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
 		<title>Wesley Moss - Lindon, UT | About Me</title>
 	</head>
 	<body>
+		<div class="nav">
+			
+		</div>
 		<div class="aboutme">
 			<h1 id="name">WESLEY MOSS</h1>
 			<h3 id="job">Warehouse Manager</h3>
-			<p id="describeme">Born in Provo, UT and raised in Lindon, UT. Working full-time for <a href="missionbelt.com">Mission Belt Co</a>.</p>
+			<p id="describeme">Born in Provo, UT and raised in Lindon, UT. Working full-time at <a href="missionbelt.com">Mission Belt Co</a>.</p>
 			<button type="button">E-Mail</button>
 			<p>Currently attending DevMountain, a 12 week program for web development, with hopes to move up the ladder at his current job.</p>
 			<p>When I'm not working or studying, I spend my free time going to the gym, playing soccer, and spending time with friends.</p>
 			<p>If you'd like to know more about me, visit my social media profiles below!</p>
+			<button type="button">Facebook</button>
+			<button type="button">Twitter</button>
+			<button type="button">Instagram</button>
 		</div>
 		
 	</body>
-	<footer>EST. 1989</footer>
+	<footer>EST. 2014</footer>
 </html>
