--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 		<title>Wesley Moss - Lindon, UT | About Me</title>
 	</head>
 	<body>
-		<div class="nav">
-			
+		<div class="me">
+			<div class="profilepic">
+				<img src="https://scontent-b-lax.xx.fbcdn.net/hphotos-frc3/229372_10151253139407228_1029819317_n.jpg">
+			</div>
 		</div>
 		<div class="aboutme">
 			<h1 id="name">WESLEY MOSS</h1>
 			<h3 id="job">Warehouse Manager</h3>
-			<p id="describeme">Born in Provo, UT and raised in Lindon, UT. Working full-time at <a href="missionbelt.com">Mission Belt Co</a>.</p>
-			<button type="button">E-Mail</button>
-			<p>Currently attending DevMountain, a 12 week program for web development, with hopes to move up the ladder at his current job.</p>
+			<p id="describeme">Born in Provo, UT and raised in Lindon, UT. Working full-time at <a href="www.missionbelt.com">Mission Belt Co</a>.</p>
+			<a href="mailto:uumoss@gmail.com"><button type="button">E-Mail</button></a>
+			<p>Currently attending <a href="http://devmounta.in/">DevMountain</a>, a 12 week program for web development, with hopes to move up the ladder at his current job.</p>
 			<p>When I'm not working or studying, I spend my free time going to the gym, playing soccer, and spending time with friends.</p>
 			<p>If you'd like to know more about me, visit my social media profiles below!</p>
-			<button type="button">Facebook</button>
-			<button type="button">Twitter</button>
-			<button type="button">Instagram</button>
+			<a href="https://www.facebook.com/wesleygmoss"><button type="button">Facebook</button></a>
+			<a href="https://twitter.com/WesleyGMoss"><button type="button">Twitter</button></a>
 		</div>
-		
 	</body>
 	<footer>EST. 2014</footer>
 </html>
