changed about me

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h3 id="job">Warehouse Manager</h3>
 			<p id="describeme">Born in Provo, UT and raised in Lindon, UT. Working full-time at <a href="www.missionbelt.com">Mission Belt Co</a>.</p>
 			<a href="mailto:uumoss@gmail.com"><button type="button">E-Mail</button></a>
-			<p>Currently attending <a href="http://devmounta.in/">DevMountain</a>, a 12 week program for web development, with hopes to move up the ladder at his current job.</p>
+			<p>Currently attending <a href="http://devmounta.in/">DevMountain</a>, a 12 week program for web development, with hopes to move up the "ladder" at his current job.</p>
 			<p>When I'm not working or studying, I spend my free time going to the gym, playing soccer, and spending time with friends.</p>
 			<p>If you'd like to know more about me, visit my social media profiles below!</p>
 			<a href="https://www.facebook.com/wesleygmoss"><button type="button">Facebook</button></a>
